--- a/myportfolio/src/pages/Home.css
+++ b/myportfolio/src/pages/Home.css
@@ -3,4 +3,8 @@ html{
 }
 .project-board{
     padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
 }
