--- a/myportfolio/src/App.css
+++ b/myportfolio/src/App.css
@@ -1,36 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@700&display=swap');
 body{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: aliceblue;
-  color: black;
+    display: flex;
+    background-color: aliceblue;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+    
 }
 header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding-left: 1rem;
   padding-right: 3rem;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
+  position: relative;
+  overflow-x: hidden;
 }
 .body-wrapper{
   display: flex;
   align-items: center;
-  gap: 10rem;
   justify-items: center;
   justify-content: center;
   flex-wrap: wrap;
 }
 .about-section{
   display: flex;
+  flex-wrap: wrap;
 
+}
+a {
+    text-decoration: none;
 }
 .contact-wrapper{
   background-color: black;
-  padding: 5rem;
+  padding: 6rem;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   margin-top: 3rem;
   gap: 2rem;
   color: white;
+  margin-bottom: 0.1rem;
+}
+.home-wrapper{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
+}
+footer{
+    max-width: 100vw;
+    overflow: hidden;
+}
+@media (max-width: 1100px){
+    html, body{
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+}
+@media (max-width: 500px)  {
+    html, body{
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+    header{
+        justify-content: space-around
+    }
+    .body-wrapper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    footer{
+        width: 70%;
+    }
+    .home-wrapper{
+        width: fit-content;
+    }
+    header{
+        padding-left: 2.5rem;
+    }
 }
