--- a/myportfolio/src/pages/About.css
+++ b/myportfolio/src/pages/About.css
@@ -2,22 +2,46 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-left: 1rem;
+   
   }
   .app-list{
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
   }
   .intro{
     font-size: 20px;
-    width: 55rem;
+    max-width: 70%;
+    font-family: Arial, Helvetica, sans-serif;
   }
+  /* .profile-img{
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 2rem;
+  } */
   .mobile-profile-img{
     display: none;
+  }
+  span{
+    color: transparent;
+    animation: effect 1s linear infinite;
+  }
+  @keyframes effect {
+    0% {
+      background: linear-gradient(#1bddff, #1859cd);
+      -webkit-background-clip: text;
+    }
+    100% {
+      background: linear-gradient(#0808fe, #1859cd);
+      -webkit-background-clip: text;
+    }
   }
   img{
     border-radius: 30%;
   }
   .logos{
     display: flex;
+    flex-wrap: wrap;
     font-size: 5rem;
     padding: 3rem;
     position: relative;
@@ -31,4 +55,12 @@
   .react-logo{
     position: relative;
     top: 3rem;
+  }
+  @media (max-width: 700px){
+    img{
+      width: 15rem;
+    }
+    .left-wrapper{
+      padding-left: 4rem;
+    }
   }
