--- a/myportfolio/src/pages/Header.css
+++ b/myportfolio/src/pages/Header.css
@@ -1,4 +1,8 @@
 .header-link{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     background-color: grey;
     color: aliceblue;
@@ -7,9 +11,13 @@
     height: 2rem;
     text-align: center;
     justify-items: center;
-    padding: 0.7rem;
+    padding: 0.7em;
     font-family: "Inter", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     
+  }
+  .mobile-head{
+    display: none;
   }
   .header-link:hover{
     box-shadow: black 5px 5px 10px 3px ;
@@ -18,12 +26,13 @@
   }
   .links{
     display: flex;
+    flex-wrap: wrap;
     gap: 5rem;
     justify-items: flex-end;
     margin-top: 1.5rem;
   }
   h1{
-    font-family: "Inter", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     color: transparent;
     animation: effect 3s linear infinite;
@@ -37,4 +46,40 @@
       background: linear-gradient(#0808fe, #1859cd);
       -webkit-background-clip: text;
     }
+  }
+  @media (max-width: 700px) {
+     .links{
+      gap: 1rem;
+     }
+     .header-link{
+      width: 3rem;
+      border-radius: 7px;
+      height: 1rem;
+     }
+     h1{
+      font-size: 2.5rem;
+     }
+  }
+  @media(max-width: 1100px){
+    .header-link{
+      width: 5rem;
+      border-radius: 15px;
+    }
+    .links{
+      gap: 1rem;
+    }
+  }
+  @media(max-width: 550px){
+    .header-link{
+      display: none;
+    }
+    .head{
+      display: none;
+    }
+    .mobile-head{
+      display: flex;
+      box-shadow: grey 0px 0px 4px 4px;
+      position: relative;
+    }
+    
   }
