--- a/myportfolio/src/pages/About.css
+++ b/myportfolio/src/pages/About.css
@@ -8,6 +8,7 @@
   .app-list{
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    color: black;
   }
   .intro{
     font-size: 20px;
