--- a/myportfolio/src/App.css
+++ b/myportfolio/src/App.css
@@ -57,6 +57,10 @@ footer{
     max-width: 100vw;
     overflow: hidden;
 }
+p{
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 @media (max-width: 1100px){
     html, body{
         max-width: 100%;
