--- a/myportfolio/src/App.css
+++ b/myportfolio/src/App.css
@@ -61,6 +61,12 @@ p{
     color: black;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+h2{
+    color: black;
+}
+h4{
+    color: black;
+}
 @media (max-width: 1100px){
     html, body{
         max-width: 100%;
