--- a/myportfolio/src/App.css
+++ b/myportfolio/src/App.css
@@ -89,6 +89,12 @@ h4{
         flex-direction: column;
         align-items: center;
     }
+    p{
+        color: white;
+    }
+    h2{
+        color: white;
+    }
     footer{
         width: 70%;
     }
